--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+HTML{
+    margin: 40px;
+
+}
 body{
-    background-color: #E7E7E7;
+    font-family:Arial, Helvetica, sans-serif;
+    background-color: (#E7E7E7);
+
+}
+p{
+    line-height: 1.5em;
+}
+h1{
+    line-height: 3.5em;
 }
