--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ HTML{
 }
 body{
     font-family:Arial, Helvetica, sans-serif;
-    background-color: (#E7E7E7);
+    background-color: (#ffffff);
     padding: 40px;
     border-top: 10px solid #242424;
     margin: 30px;
