--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ HTML{
 }
 body{
     font-family:Arial, Helvetica, sans-serif;
-    background: (#b4b4b4);
+    background: (#be1111);
     padding: 40px;
     border-top: 10px solid #242424;
     margin: 30px;
