--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
 HTML{
-    margin: 45px;
-    background: bisque;
+    background: darkgrey;
 
 }
 body{
     font-family:Arial, Helvetica, sans-serif;
-    background-color: (#be1111);
+    background: (#ffffff);
     padding: 40px;
     border-top: 10px solid #242424;
     margin: 30px;
