--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 HTML{
-    background: darkgrey;
+    background: rgb(255, 255, 255);
 
 }
 body{
     font-family:Arial, Helvetica, sans-serif;
-    background: (#ffffff);
     padding: 40px;
     border-top: 10px solid #242424;
     margin: 30px;
