--- a/style.css
+++ b/style.css
@@ -17,5 +17,6 @@ h1{
     margin:0;
 }
 article{
-    border-top:5px dotted rgb(220, 220, 220);
+    border-top:4px solid rgb(65, 65, 65);
+    background-color: rgb(225, 225, 225);
 }
