--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ HTML{
 
 }
 body{
+    background: rgb(177, 177, 177);
     font-family:Arial, Helvetica, sans-serif;
     padding:40px;
     border-top:10px solid #242424;
@@ -18,5 +19,5 @@ h1{
 }
 article{
     border-top:4px solid rgb(65, 65, 65);
-    background-color: rgb(225, 225, 225);
+    background-color: rgb(214, 214, 214);
 }
