--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ h1{
     margin:0;
 }
 article{
+    margin: 25px;
     border-top:4px solid rgb(65, 65, 65);
     background-color: rgb(214, 214, 214);
 }
