--- a/style.css
+++ b/style.css
@@ -19,6 +19,6 @@ h1{
 }
 article{
     margin: 25px;
-    border-top:4px solid rgb(191, 190, 190);
+    border-top:4px double rgb(149, 149, 149);
     background-color: rgb(255, 255, 255);
 }
