--- a/style.css
+++ b/style.css
@@ -6,3 +6,7 @@ body{
     margin: 5ex;
     font-family: 'Times New Roman', Times, serif;
 }
+#blog-heading{
+font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+
+}
