--- a/style.css
+++ b/style.css
@@ -14,5 +14,5 @@ font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida San
     color: rgb(66, 66, 66);
 }
 article{
-    margin-top:5px dotted black;
+    border-top:5px dotted black;
 }
