--- a/style.css
+++ b/style.css
@@ -14,5 +14,5 @@ font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida San
     color: rgb(66, 66, 66);
 }
 article{
-    border-top:2px dotted black;
+    border-top:2px dotted rgba(0, 0, 0, 0.405);
 }
