--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
 #blog-heading{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
-    font-size: x-large;
+    font-size: 40px;
 }
 .writen-article{
     color: rgb(66, 66, 66);
