--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ h2{
 p{
     margin: 10px;
 }
-p a{
+a{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-align: center;
 }
