--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
     font-size: 60px;
-    color: dimgrey;
+    color: black;
 }
 .writen-article{
     color: rgb(66, 66, 66);
@@ -29,5 +29,5 @@ p{
 }
 a{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    text-align: center;
+    
 }
