--- a/style.css
+++ b/style.css
@@ -44,7 +44,6 @@ td{
     border: 3.6px solid black;
 }.search-bar{
     position: sticky;
-    top: 0;
-    left: 50%;
-    text-align: center;
+    top: 25px;
+    left: 40%;
 }
