--- a/style.css
+++ b/style.css
@@ -42,8 +42,13 @@ th{
 td{
     text-align: center;
     border: 3.6px solid black;
-}.search-bar{
+}
+.search-bar{
     position: sticky;
     top: 10px;
     left: 40%;
+}
+section{
+    display: flex;
+    flex-direction: column;
 }
