Media CSS change

--- a/style.css
+++ b/style.css
@@ -57,3 +57,8 @@ article img{
     float: right;
     margin: 10px;
 }
+@media (max-width: 400px) {
+    body{
+        background: rgb(221, 246, 246);
+    }
+}
