--- a/style.css
+++ b/style.css
@@ -59,6 +59,6 @@ article img{
 }
 @media (max-width: 400px) {
     body{
-        background: rgb(221, 246, 246);
+        background-image: rgb(221, 246, 246);
     }
 }
