--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ article img{
 }
 @media (max-width: 400px) {
     .search-bar{
-        position: static;
+        position: inherit;
         top: 0
         teft: 0
     }
