--- a/style.css
+++ b/style.css
@@ -58,9 +58,7 @@ article img{
     margin: 10px;
 }
 @media (max-width: 400px) {
-    .search-bar{
-        position: inherit;
-        top: 0
-        teft: 0
+    html{
+        background: black;
     }
 }
